# nexus-sdv

./: .gitignore  README.md
.github/: CHANGELOG.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.MD
.github/workflows/: bootstrap-platform.yml  build-push-ai-assistant.yml  build-push-deploy-data-api-sampler.yml  build-push-deploy-data-api.yml  build-push-deploy-registration.yml  build-push-nats-auth-callout.yml  deploy-external-dns.yml  deploy-keycloak.yml  deploy-mcp-servers.yml  deploy-nats-auth-callout.yml  deploy-nats-bigtable-connector.yml  deploy-nats.yml  deploy-sample-services.yml  terraform-apply.yml  terraform-plan.yml  test-base-services.yml  trivy-license-scan.yml
sample-clients/python/: pyproject.toml
